Fixed index result boxes changing height while hovering them on Firefox

--- a/resources/assets/css/browser_specific.css
+++ b/resources/assets/css/browser_specific.css
@@ -12,12 +12,12 @@
    .clip_global_info:hover .ep-title{
       color: #3b72a9;
       font-size: 15px;
-      margin-top: 2px;
+      margin-top: 2px !important;
    }
    .clip_global_info:hover .ep-add-details{
       display: inline-block !important;
       position: relative;
-      top: -4px;
+      top: -4px !important;
    }
    .clip_global_info{
       padding: 2px 10px 2px 0px;
